Fixed root UI z-index

--- a/content/dota_addons/ziv/panorama/styles/custom_game/ingame_ui.css
+++ b/content/dota_addons/ziv/panorama/styles/custom_game/ingame_ui.css
@@ -81,6 +81,8 @@
 .InGameUIRoot {
 	width: 1920px;
 	height: 1080px;
+
+	z-index: 1;
 }
 
 .Bottom {
